# ubiquitous-broccoli

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
core/: config.py  logging.py
eniris_rm/: __init__.py  __main__.py  message_processing.py  ws_dummy_server.py
schemas/: message.py
tests/: conftest.py  test_placeholder.py  test_transform.py
