[tool.poetry]
name = "eniris-rm"
version = "0.1.0"
description = "MQTT to S2 PowerMeasurement bridge for Eniris SmartGrid integration"
authors = ["WePositive <info@wepositive.energy>"]
readme = "README.md"
packages = [{include = "eniris_rm"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.4"
pydantic-settings = {extras = ["dotenv"], version = "^2.9.1"}
aiomqtt = "^2.4.0"
websockets = "^13.1"
s2-python = "^0.5.0"
structlog = "^25.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.3.3"
pyright = ">=1.1.320"
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.1"
pytest-asyncio = "^0.26.0"
ruff = ">=0.0.283"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
stubPath = "./typings"
reportImportCycles = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
exclude = [
    "./typings/*",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov",
    "--ignore=dist"
]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
branch = true
source = ["./eniris_rm"]

[tool.coverage.report]
exclude_also = [
    "if .*TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true

[tool.ruff.lint]
ignore = ["PT013"]
select = ["E4", "E7", "E9", "F", "BLE","ASYNC","DTZ","C4","T10","T20","PTH","UP","I","LOG","G","PT"]
extend-safe-fixes = ["UP"]

[tool.ruff]
extend-exclude = [
    "typings/*",
]
